--- a/style.css
+++ b/style.css
@@ -1,8 +1,123 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root{
+    --text-color:#909090;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 body{
     background: rgb(0, 0, 0);
+    padding: 6px;
 }
+a{
+    text-decoration: none;
+    color: white;
+}
+header{
+    height: 52px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    padding: 4px;
+    padding-left: 16px;
+}
+header .logo{
+    width: 18%;
+}
+header .logo img{
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+}
+.header-mid-sec{
+    display: flex;
+    gap: 12px;
+    height: 100%;
+}
+.header-mid-sec a{
+    background-color: #1F1F1F;
+    height: 100%;
+    width: 46px;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    padding: 6px;
+}
+.header-mid-sec a img{
+    width: 100%;
+}
+.search-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 4px 12px;
+    background-color: #1F1F1F;
+    width: 480px;
+    border-radius: 42px;
+    color: #909090;
+}
+.search-bar i{
+    color: var(--text-color);
+    font-size: 1.3rem;
+}
+.search-bar input{
+    background: transparent;
+    border: 0;
+    outline: 0;
+    width: 75%;
+    color: white;
+    font-size: 0.9rem;
+}
+.search-bar input::placeholder{
+    color: var(--text-color);
+    font-size: 0.9rem;
+}
+.search-bar:active{
+    border: 2px solid white;
+}
+.search-bar .browse-bar{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+.browse-bar div{
+    height: 24px;
+    width: 1px;
+    background-color: var(--text-color);
+}
+.search-bar img{
+    width: 32px;
+}
+.header-btns button{
+    width: 110px;
+    height: 48px;
+    border: none;
+    border-radius: 26px;
+    font-weight: 700;
+    font-size: 0.95rem;
+    margin-left: 10px;
+    cursor: pointer;
+}
+.header-first-btn{
+    background-color: transparent;
+    color: var(--text-color);
+}
+.header-second-btn{
+    background-color: white;
+}
+.header-first-btn:hover{
+    color: white;
+    transform: scale(1.02);
+}
+.header-second-btn:hover{
+    background: #F0F0F0;
+    transform: scale(1.02);  
+}
+
+
